# cv

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  .replit  CLAUDE.md  Dashboard.py  Pipeline.py  README.md  Sniper.py  master_profile (2).json  pyproject.toml  replit.md  requirements.txt  skills-lock.json
.agents/skills/machine-learning/: SKILL.md
.agents/skills/machine-learning/assets/: config.yaml  schema.json
.agents/skills/machine-learning/references/: GUIDE.md  PATTERNS.md
.agents/skills/machine-learning/scripts/: validate.py
.agents/skills/pandas-data-analysis/: SKILL.md
.agents/skills/pandas-data-analysis/assets/: config.yaml
.agents/skills/pandas-data-analysis/references/: GUIDE.md
.agents/skills/pandas-data-analysis/scripts/: helper.py
.agents/skills/pandas-pro/: SKILL.md
.agents/skills/pydantic/: SKILL.md  metadata.json
.agents/skills/streamlit-pro/: SKILL.md
.github/workflows/: codeql.yml  ghost_sourcing.yml
.kilo/plans/: 1776710032175-stellar-orchid.md
.streamlit/: config.toml
attached_assets/: Dashboard_1776959011159.py  Pasted--Master-Prompt-Refonte-du-Studio-de-Candidature-Job-Cop_1776958969360.txt  Pasted--Tu-es-un-expert-Python-senior-J-ai-un-pipeline-de-sour_1777277773974.txt  cv_generator_1776959011159.py  database_1776959011160.py  job_copilot_studio_plan_1776952011039.md  link_rescue_1776959011160.py
config/: theme.py
cv_job_tracker.egg-info/: PKG-INFO  requires.txt  top_level.txt
debug/: test_fill_pipeline.py
docs/: README_old.md  TECHNICAL_SPECIFICATIONS.md  convergence_plan.md
engine/: analytics.py  cv_generator.py  cv_matcher.py  data_engine.py  database.py  engines.py  evaluator.py  generation_multi_agent.py  history.py  letter_renderer.py  matching.py  prompts.py  rendering.py  ripple_engine.py  schemas.py  section_rewrite.py  sourcing_advanced.py  sourcing_jobspy.py  sourcing_worker.py  studio_analysis.py  studio_service.py
engine/sourcing/: __init__.py  _cache.py  _utils.py  adzuna.py  companies_watcher.py  france_travail.py  orchestrator.py  ranking.py
infra/: api.py
infra/docker/: Dockerfile.dashboard  docker-compose.job-tracker.yml
infra/extension/: manifest.json  popup.html  popup.js
logs/: logs-zeino-droid-cv-main-Dashboard.py-2026-04-21T05_50_16.942Z.txt
profiles/: energy.json  full_profile.md  master_profile.json  master_profile.json.bak  search_config.yaml  simulation.json  target_companies.yaml
scratch/: test_ripple.py
scripts/: audit_seniority.py  audit_target_companies.py  clipper.js  debug_generation.py  generate_targeted_cv.py  ghost_sourcing.py  render_targeted_cv.py  seniorize_profile.py  test_render.py  test_shrink_visual.py
scripts/dev/: fullstack.sh
storage/: jobs.db  llm_expansion_cache.json
templates/: cv_template.typ  lettre_template.typ
tests/: integrity_check.py  test_cv_generator_unit.py  test_database.py  test_letter_renderer.py  test_matching.py  test_prompts.py  test_section_rewrite.py  test_sourcing_jobspy.py  test_sourcing_orchestrator.py  test_sourcing_ranking.py  test_studio_service.py
ui/components/: action_block.py
ui/pages/: job_detail.py
vault/AKKODIS_FRANCE_SAS_Ingénieur_mécanique_essais_tests_F_H_-_Te/: lettre.txt
vault/Airbus_Ingénieur_R_D_Simulation_Numérique/: lettre.txt
vault/Dassault_Systèmes_Ingénieur_CFD/: lettre.txt
vault/SOPHIA_ENGINEERING_Ingénieur_calcul_spatial__H_F_/: lettre.txt
vault/Safran_Ingénieur_Calcul_Mécanique/: lettre.txt
vault/resumes/: cv_airbus_ingnieur_rd_simulation_numrique_20260423_1327.md  cv_airbus_ingnieur_rd_simulation_numrique_20260423_1327.tex  cv_akkodis_france_sas_ingnieur_mcaniqueessaistests_fh__test_essai_validation_expertise_hf_20260423_1332.md  cv_akkodis_france_sas_ingnieur_mcaniqueessaistests_fh__test_essai_validation_expertise_hf_20260423_1332.tex  cv_arcelormittal_ingnieur_simulation_procds_20260418_1152.md  cv_arcelormittal_ingnieur_simulation_procds_20260418_1152.tex  cv_arcelormittal_rd_ingnieur_simulation_rd_20260421_0242.md  cv_arcelormittal_rd_ingnieur_simulation_rd_20260421_0242.tex  cv_arcelormittal_rd_ingnieur_simulation_rd_20260421_0243.md  cv_arcelormittal_rd_ingnieur_simulation_rd_20260421_0243.tex  cv_dassault_systmes_ingnieur_cfd_20260423_1647.md  cv_dassault_systmes_ingnieur_cfd_20260423_1647.tex  cv_integrity_check_corp_ingnieur_rd_test_20260420_0502.md  cv_integrity_check_corp_ingnieur_rd_test_20260420_0502.tex  cv_safran_ingnieur_calcul_mcanique_20260423_1643.md  cv_safran_ingnieur_calcul_mcanique_20260423_1643.tex
(+1 files in other folders)
